force-app/main/default/objects/Lead_In_Program__c/Lead_In_Program__c.object-meta.xml
<CustomObject>
    <label>Lead In Program</label>
    <nameField>
        <displayFormat>LP-{000000}</displayFormat>
        <label>Lead In Program</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Leads In Program</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>