force-app/main/default/objects/Lead_In_Program__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Leads In Program</relationshipLabel>
    <relationshipName>Leads_In_Program</relationshipName>
    <type>Lookup</type>
</CustomField>