force-app/main/default/objects/Lead_In_Program__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Leads In Program</relationshipLabel>
    <relationshipName>Leads_In_Program</relationshipName>
    <type>Lookup</type>
</CustomField>