force-app/main/default/objects/Lead_In_Program__c/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program</label>
    <referenceTo>Program__c</referenceTo>
    <relationshipLabel>Leads In Program</relationshipLabel>
    <relationshipName>Leads_In_Program</relationshipName>
    <type>Lookup</type>
</CustomField>