force-app/main/default/objects/Lead_In_Program__c/fields/Responsible_contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Responsible_contact_Email__c</fullName>
    <formula>Program__r.Responsible_Contact__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Responsible contact Email</label>
    <type>Text</type>
</CustomField>