force-app/main/default/objects/Lead_In_Program__c/listViews/Leads_in_Programs_All.listView-meta.xml
<ListView>
    <fullName>Leads_in_Programs_All</fullName>
    <columns>NAME</columns>
    <columns>Lead__c</columns>
    <columns>Program__c</columns>
    <columns>Responsible_contact_Email__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>Leads in Programs- All</label>
</ListView>