force-app/main/default/objects/Lead_In_Program__c/listViews/Leads_in_Programs_Converted.listView-meta.xml
<ListView>
    <fullName>Leads_in_Programs_Converted</fullName>
    <columns>NAME</columns>
    <columns>Program__c</columns>
    <columns>Lead__c</columns>
    <columns>Case__c</columns>
    <columns>Responsible_contact_Email__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Case__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Leads in Programs- Converted</label>
</ListView>