force-app/main/default/objects/Lead_In_Program__c/listViews/Leads_in_Programs_Today.listView-meta.xml
<ListView>
    <fullName>Leads_in_Programs_Today</fullName>
    <columns>NAME</columns>
    <columns>Lead__c</columns>
    <columns>Program__c</columns>
    <columns>Responsible_contact_Email__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Leads in Programs- Today</label>
</ListView>